=== Deluge 1.1.8 - (In Development) ===
==== Core ====
  * Fix pause all/resume all
  * Torrent name is now changed when the root folder or file is renamed

==== GtkUI ====
  * Fix high cpu usage when displaying speeds in titlebar
  * Fix showing non-utf8 encoded torrents in add torrent dialog -- this adds
    an additional dependency on chardet.

==== WebUI ====
  * Fix starting when -l option is used

=== Deluge 1.1.7 - (25 April 2009) ===
==== Core ====
  * Fix issue where cannot resume torrent after doing a 'Pause All'
  * Add workaround for 'address_v4 from unsigned long' bug experienced by users
    with 64-bit machines.  This bug is fixed in libtorrent 0.14.3.

==== GtkUI ====
  * Fix #883 segfault if locale is not using UTF-8 encoding
  * Fix for adding torrents with invalid filename encodings
  * Fix displaying IPv6 peers in the Peers tab
  * Fix starting the daemon in OS X
  * Fix loading improperly created torrents with mismatched encodings
  * Fix displaying improper progress when creating torrent

==== Windows ====
  * Fix freezing in create torrent dialog
  * Fix creating torrents in Windows
  * Fix free space check

=== Deluge 1.1.6 - (06 April 2009) ===
==== Core ====
  * Fix udp trackers being classified as DHT source
  * Fix #855 force a resume on a torrent if a 'Force Recheck' is initiated
  * Fix #862 deluged crash when access http://localhost:58846

==== GtkUI ====
  * Fix displaying torrents with non-utf8 encodings in add torrent dialog

==== WebUI ====
  * Fix #870 use proper config location for loading ssl cert

==== Misc ====
  * Add OpenSSL exception to license

=== Deluge 1.1.5 - (16 March 2009) ===
==== Core ====
  * Fix config file saving when no current config file exists

==== GtkUI ====
  * Add 'Comments' field to the Details tab
  * Fix #841 maximum upload slots tooltip

=== Deluge 1.1.4 - (08 March 2009) ===
==== Core ====
  * Fix displaying file errors when the torrent isn't paused