@@ -7,6 +7,7 @@
   * Fix high cpu usage when displaying speeds in titlebar
   * Fix showing non-utf8 encoded torrents in add torrent dialog -- this adds
     an additional dependency on chardet.
+  * Fix exception when timing out trying to send notification email
 
 ==== WebUI ====
   * Fix starting when -l option is used
